# workshop-extracao-api-do-zero

./: .env  README.md  bitcoin_dados.json  exemplo_api_compare.py  exemplo_selenium_compare.py  pyproject.toml  requirements.txt
app/: dashboard_00.py  dashboard_01.py
exemplos/: exemplo01.py
src/: pipeline_00.py  pipeline_01.py  pipeline_02.py  pipeline_04.py  pipeline_06.py  pipeline_07.py
