[tool.poetry]
name = "workshop-extracao-de-api-do-zero"
version = "0.1.0"
description = ""
authors = ["Thiago Ferraz <thiagovdferraz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
psutil = "^6.1.0"
selenium = "^4.27.1"
tinydb = "^4.8.2"
sqlalchemy = "^2.0.36"
python-dotenv = "^1.0.1"
logfire = "^2.7.1"
psycopg2 = "^2.9.10"
streamlit = "^1.41.1"
pandas = "^2.2.3"
numpy = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
